--- a/wikidict/templates/support.html
+++ b/wikidict/templates/support.html
@@ -43,6 +43,7 @@
 <p>其他技术细节，可以访问<a href="http://maruta.be/1984">我的个人博客</a>，我会将一些零碎想法记录在那儿。</p>
 <h3>更新记录</h3>
 <p>
+    2014.10.11：将本网站源代码公开到Github，地址是<a href="https://github.com/longnight/Liyuwiki" target="_blank">这里</a>，欢迎下载研究、参与改进，如有疑问请与我联系。<br />
     2014.09.04：启用缓存以减少“相关的词条”的重复计算，提高载入速度。<br />
     2014.08.29：增加了“大家最近搜的内容”。<br />
     2014.08.28：增加了“相关的词条”。<br />
