add Restful APIs
add Restful APIs

--- a/wikidict/templates/detail.html
+++ b/wikidict/templates/detail.html
@@ -170,10 +170,12 @@
 
     <div class="f-b-02">
         <a href="/about.html" >关于</a><br />
-        <a href="/support.html">采用的技术</a>
+        <a href="/support.html">采用的技术</a><br />
+        <a href="/api.html">APIs</a>
     </div>
 
     <div class="f-b-03">
+
        <a href="/ugc_guide.html">投稿指南</a><br />
         联系：
     <SCRIPT TYPE="text/javascript">
@@ -181,7 +183,8 @@
     emailE=('admin@' + 'liyuwiki.com')
     document.write('<A href="mailto:' + emailE + '">' + emailE + '</a>')
     //-->
-    </script>
+    </script><br />
+    <a>&nbsp;</a>
     </div>
 </div>
 </div>
