--- a/wikidict/templates/index.html
+++ b/wikidict/templates/index.html
@@ -66,6 +66,7 @@
 <div class="bullshit"><a href="/about.html">关于</a>·
     <a href="/support.html">技术支持</a>·
     <a href="/ugc_guide.html">投稿指南</a>·
+    <a href="/api.html">APIs</a>·
     <a target="_blank" href="http://www.miibeian.gov.cn/">桂ICP备1004809号-9</a></div>
 {% if is_online %}
 <div style="visibility:hidden"><script src="http://js.users.51.la/17101801.js"></script>
