--- a/wikidict/templates/api.html
+++ b/wikidict/templates/api.html
@@ -4,14 +4,14 @@
 
 {% block colcenter %}
     <div class="single">
-    <h1>API</h1>
+    <h3>API</h3>
     <p> 
     <a href="http://liyuwiki.com/api/v1/">http://liyuwiki.com/api/v1/</a>:<br />
     最近的10个新词条
     </p>
 
     <p>
-    <a href="http://liyuwiki.com/api/v1/term/388144/">http://liyuwiki.com/api/v1/term/[uid]/</a>:<br />
+    <a href="http://liyuwiki.com/api/v1/term/388144">http://liyuwiki.com/api/v1/term/[uid]</a>:<br />
     词条内容
     </p>
 
