add 'random' args into url.

--- a/wikidict/templates/search/search.html
+++ b/wikidict/templates/search/search.html
@@ -33,7 +33,7 @@
                 <a title="random pics" href="/add_search_term/{{ query }}/">
                     <img alt="随机图片" src='{% random_img "search_not_found/" %}' />
                 </a>
-                <span id="random_slogan">随机小图片，每天好心情 : )</span>
+                <span id="random_slogan">( Random pics when no search results)</span>
                 </div>
                 </div>
             {% endfor %}
