--- a/wikidict/templates/index.html
+++ b/wikidict/templates/index.html
@@ -23,7 +23,7 @@
 	<form method="get" action="/search" class="form-wrapper cf">
       {{ sform.q }}
       <button type="submit"> 搜 索 </button>
-    </form> 
+    </form>
 </div>
 
 <div class="homepage2">或</div>
@@ -65,7 +65,7 @@
 
 <div class="bullshit"><a href="/about.html">关于</a>·
     <a href="/support.html">技术支持</a>·
-    <a href="/ugc_guide.html">投稿指南</a>·
+    <a href="/ugc_guide.html">创建指南</a>·
     <a href="/api.html">APIs</a>·
     <a target="_blank" href="http://www.miibeian.gov.cn/">桂ICP备1004809号-9</a></div>
 {% if is_online %}
