--- a/wikidict/templates/ugc_guide.html
+++ b/wikidict/templates/ugc_guide.html
@@ -1,8 +1,8 @@
 {% extends "detail.html" %}
 {% load static %}
-{% block title %}投稿指南{% endblock %}
-{% block description %}投稿指南_俚语维基{% endblock %}
-{% block keyword %}投稿指南{% endblock %}
+{% block title %}创建指南{% endblock %}
+{% block description %}创建指南_俚语维基{% endblock %}
+{% block keyword %}创建指南{% endblock %}
 {% block searchform %}<input type="text" placeholder="..." name="q" id="id_q">{% endblock %}
 
 
@@ -10,7 +10,7 @@
 
 {% block colcenter %}
 <div class="single">
-<h3>投稿指南</h3>
+<h3>创建指南</h3>
 <p class="guide">俚语，应该是在相当大范围内被认知的概念</p>
 <p>一个小圈子里使用的惯用语，其他人是基本没机会遇见的，那么发出来也就没意义了。</p>
 <br />
@@ -18,7 +18,9 @@
 <p></p>
 <br />
 <p class="guide">请勿创建可能威胁本网站的存在、网站所有者的人身安全的内容</p>
-<p>我们都讨厌看不见边框的审查制度，但，由于众所周知的原因...你懂的。不妨采用通假字、通配符。</p>
+<p>我们都讨厌看不见边框的审查制度，白色恐怖和万马齐喑将使整个社会全方位堕落。</p>
+<p>但，由于众所周知的原因...你懂的。不妨采用通假字、通配符。</p>
+<p>如果匿名能使你更有安全感一点，不妨匿名。</p>
 <br />
 
 
